[package]
name = "gfa2paf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "gfa2paf_lib"
path = "src/lib.rs"

[[bin]]
name = "gfa2paf"
path = "src/main.rs"



[dependencies]
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
clap = "=3.0.0-beta.4"
